; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffmpeg_opt.c_opt_recording_timestamp.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffmpeg_opt.c_opt_recording_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@.str = private unnamed_addr constant [34 x i8] c"creation_time=%Y-%m-%dT%H:%M:%S%z\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"metadata\00", align 1
@options = common dso_local global i32 0, align 4
@AV_LOG_WARNING = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [65 x i8] c"%s is deprecated, set the 'creation_time' metadata tag instead.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @opt_recording_timestamp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opt_recording_timestamp(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca [128 x i8], align 16
  %10 = alloca i32, align 4
  %11 = alloca %struct.tm, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** %8, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = call i32 @parse_time_or_die(i8* %14, i8* %15, i32 0)
  %17 = sitofp i32 %16 to double
  %18 = fdiv double %17, 1.000000e+06
  %19 = fptosi double %18 to i32
  store i32 %19, i32* %10, align 4
  %20 = call %struct.tm* @gmtime(i32* %10)
  %21 = bitcast %struct.tm* %11 to i8*
  %22 = bitcast %struct.tm* %20 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %21, i8* align 4 %22, i64 4, i1 false)
  %23 = getelementptr inbounds [128 x i8], [128 x i8]* %9, i64 0, i64 0
  %24 = call i32 @strftime(i8* %23, i32 128, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), %struct.tm* %11)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %27, label %26

26:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %35

27:                                               ; preds = %3
  %28 = load i32*, i32** %8, align 8
  %29 = getelementptr inbounds [128 x i8], [128 x i8]* %9, i64 0, i64 0
  %30 = load i32, i32* @options, align 4
  %31 = call i32 @parse_option(i32* %28, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %29, i32 %30)
  %32 = load i32, i32* @AV_LOG_WARNING, align 4
  %33 = load i8*, i8** %6, align 8
  %34 = call i32 @av_log(i32* null, i32 %32, i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.2, i64 0, i64 0), i8* %33)
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %27, %26
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @parse_time_or_die(i8*, i8*, i32) #1

declare dso_local %struct.tm* @gmtime(i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @strftime(i8*, i32, i8*, %struct.tm*) #1

declare dso_local i32 @parse_option(i32*, i8*, i8*, i32) #1

declare dso_local i32 @av_log(i32*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
